# Tauri-Whisper-app_Younes-Lahouiti

./: .env.example  .env.production  .gitignore  CLAUDE.md  LIVE_TRANSCRIPTION_ROADMAP.md  README.md  build_with_vulkan.bat  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/: architecture.md  coding-standards.md  design-system.md  development-guide.md  github-actions.md  issue-to-gpt.md  roadmap.md  routing.md  settings.local.json  todo.md
.claude/commands/: setup-fe-structure.md
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci-cd.yml  test-build.yml
.storybook/: preview.ts
docs/: architecture.md  coding-standards.md  development-guide.md  roadmap.md  rust-testing.md  stack.md  vosk-frontend-implementation-guide.md  vosk-frontend-integration-plan.md  vosk-rs-api-reference.md  whisper-rs-api-reference.md
scripts/: sync-windows-dlls.sh  sync-windows-dlls.ts
src/: App.tsx  env.ts  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  vosk_live_transcriber.rs
src-tauri/src/whisper_rs_imp/: live_transcriber.rs  mod.rs  transcriber.rs
src-tauri/tests/: test_commands.rs
src/api/: client.ts  models.ts  system.ts  vosk.ts
src/api/endpoints/: transcription.ts
src/app/components/: STORYBOOK.md
src/app/hooks/: useModels.ts  useVoskLiveTranscription.ts
src/app/providers/: QueryProvider.tsx
src/app/routes/: __root.tsx
src/app/stores/: README.md  useAppStore.ts  useTranscriptionSettingsStore.ts  useTranscriptionStore.ts
src/app/types/: transcriptionSettings.ts
src/app/utils/: fileToBlob.ts  fileValidation.ts  platform.ts  timeFormat.ts
src/components/: STORYBOOK.md  Sidebar.tsx
src/constants/: whisper-models.ts
src/routes/: index.tsx  models.tsx  settings.tsx  transcribe.tsx
src/routes/(home)/: index.tsx
src/routes/models/: index.tsx
src/routes/settings/: index.tsx
src/routes/transcribe/: index.tsx
src/sass/: main.scss
src/sass/base/: _normalization.scss
src/sass/components/: _sidebar.scss
src/sass/pages/: _home.scss  (+1 more)
src/styles/: main.scss
src/utils/: css.ts
(+40 files in other folders)
