[package]
name = "tauri-whisper-app"
version = "0.0.1"
description = "A Tauri App for subtitle generation"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-sidecar = "1.1"
whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs.git" }
vosk = "0.3"
zip = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
hound = "3.5"
anyhow = "1.0"
num_cpus = "1.16"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
once_cell = "1.19"


[features]
custom-protocol = ["tauri/custom-protocol"]
