[package]
name = "tauri-whisper-app"
version = "0.0.1"
description = "A Tauri App for subtitle generation"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-sidecar = "1.1"

# Platform-specific whisper-rs: Vulkan for Windows/Linux, CPU-only for macOS
[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs.git", features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs.git" }

[target.'cfg(target_os = "windows")'.dependencies]
vosk = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
vosk = "0.3"

[dependencies.zip]
version = "0.6"

[dependencies.reqwest]
version = "0.12"
features = ["blocking"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.hound]
version = "3.5"

[dependencies.anyhow]
version = "1.0"

[dependencies.num_cpus]
version = "1.16"

[dependencies.tauri-plugin-dialog]
version = "2"

[dependencies.tauri-plugin-fs]
version = "2"

[dependencies.tauri-plugin-os]
version = "2"

[dependencies.once_cell]
version = "1.19"


[features]
custom-protocol = ["tauri/custom-protocol"]
